--- a/citizen/templates/citizen/dashboard.html
+++ b/citizen/templates/citizen/dashboard.html
@@ -384,7 +384,7 @@
                   </select>
                 </div>
                 <div class="card-body">
-                  <div class="chart-area">
+                  <div class="chart-area" style="min-height: 20rem;">
                     <canvas id="myBarChart"></canvas>
                   </div>
                 </div>
